fixed z-index issue

--- a/src/sections/hero/styles.module.scss
+++ b/src/sections/hero/styles.module.scss
@@ -30,6 +30,7 @@ $breakpoint-three: 650;
     grid-row: 2 / span 2;
     grid-column: 1 / span 2;
     position: relative;
+    z-index: -2;
 
     .showcaseTwo {
       position: absolute;
@@ -45,6 +46,7 @@ $breakpoint-three: 650;
     grid-row: 1 / span 3;
     grid-column: 2 / span 2;
     position: relative;
+    z-index: -1;
 
     .showcaseOne {
       position: absolute;
